--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,19 @@ build/* linguist-vendored
 
 # Ignore JavaScript dependencies in node_modules from statistics
 node_modules/* linguist-vendored
+
+# Exclude HTML, CSS, SCSS, JavaScript, Jupyter Notebook, Handlebars, and specific directories from language statistics
+*.html linguist-vendored
+*.css linguist-vendored
+*.scss linguist-vendored
+*.js linguist-vendored
+*.dm linguist-vendored
+*.ipynb linguist-vendored
+*.hbs linguist-vendored
+views/* linguist-vendored
+routes/* linguist-vendored
+tests/* linguist-vendored
+lib/* linguist-vendored
+spec/* linguist-vendored
+js/* linguist-vendored
+javascript/* linguist-vendored
